# ancarion

./: .gitignore  CMakeLists.txt  ancarion2.vcxproj  ancarion2.vcxproj.filters  keybinds.txt  main.cpp  settings.txt  vcpkg.json
data/: keybinds.txt  worldgen.txt
data/art/: main_menu.aa
engine/: ascii_engine.h
engine/sdl/: color.h  input.h  surface.cpp  surface.h  window.cpp  window.h
engine/types/: alignment.h  point.h  rect.h  size.cpp  size.h
engine/ui/: border.h  button.cpp  button.h  label.cpp  label.h  menu.cpp  menu.h  ui.cpp  ui.h  ui_element.h
game/: actions.cpp  actions.h  config.cpp  config.h  game.cpp  game.h  input_mapper.cpp  input_mapper.h
game/ui/: border.h  button.cpp  menu.cpp  ui.cpp
game/util/: random.cpp  random.h
src/engine/: ascii_engine.h
src/engine/graphics/: drawable.h  surface_drawable.h
src/engine/sdl/: color.cpp  color.h  glyph.h  input.cpp  input.h  surface.cpp  surface.h  window.cpp  window.h
src/engine/types/: alignment.h  characters.cpp  characters.h  color.h  glyph.h  point.cpp  point.h  rect.cpp  size.cpp  size.h
src/game/: actions.cpp  actions.h  game.cpp  game.h  state_manager.cpp  state_manager.h
src/game/states/: game_state.h  main_menu.cpp  main_menu.h  worldgen_menu.cpp  worldgen_menu.h
src/game/ui/: border.cpp  button.cpp  button.h  label.h  menu.cpp  menu.h  multi_menu.h  ui.cpp  ui.h  ui_element.h
src/game/util/: ascii_art.cpp  ascii_art.h  compression.cpp  compression.h  random.cpp  random.h
src/game/world/: world.cpp  world.h  (+4 more)
x64/Release/: ancarion2.exe.recipe  ancarion2.iobj  ancarion2.ipdb
(+8 files in other folders)
